[package]
name = "iroh-roq"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "RTP over iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-roq"

rust-version = "1.81"

[dependencies]
anyhow = "1.0.98"
iroh = { version = "0.35", default-features = false }
iroh-quinn-proto = "0.13.0"
n0-future = "0.1.3"
rtp = "0.13"
tokio = { version = "1.45.1", features = ["sync"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
webrtc-util = { version = "0.11", default-features = false, features = [
    "marshal",
] }

[dev-dependencies]
opus = "0.3.0"
